@@ -13,16 +13,25 @@ class SubmissionsController < ApplicationController
   # GET /submissions/new?code=XSZ152
   def new
   	@code = params[:code]
-  	#@game = Game.from_code(code)
-    @submissions = Submission.new
+  	@game = Game.from_code(@code)
+    @submission = Submission.new
+    @submission.game = @game
+    #@game.submissions << @submission
   end
 
   # POST /submissions
   # POST /submissions.json
   def create
-    @submission = Submission.new
-    @game.creator = current_creator
+  	# This will never be hit oddly
+  	logger.debug 'herrrr'
+    #@submission = Submission.new
+    #@game.creator = current_creator
+    redirect_to('/')
+  end
 
+  # gets hit a
+  def update
+  	logger.debug 'fukkk'
   end
 
   # DELETE /submissions/1
