@@ -1,0 +1,48 @@
+<%= form_for @submission do |f| %>
+
+<section class="container">
+  
+  <div class="container-fluid">
+    <div class="block-header">
+      <h2></h2>
+    </div>
+    <!-- Input -->
+    <div class="row clearfix">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <div class="card">
+          <div class="header">
+            <h2>
+              <%= @submission.game.title.upcase %>
+            </h2>
+          </div>
+          <div class="body">
+            
+            <div class="row clearfix">
+              <div class="col-sm-12">
+
+                <% @submission.game.questions.each do |question| %>
+                  <h4><%= question.title %></h4>
+                  <div class="form-group">
+                    <div class='btn-group styled-select slate'>
+                      <%= f.select(:answers, [[question.response1, '1'], [question.response2, '2']], {}, { :class => 'btn dropdown-toggle btn-default', :name => 'submission[answers][]' }) %>
+                    </div>
+                  </div>
+                <% end %>
+
+                <div class="form-group">
+                  <%= f.hidden_field :code, class:"form-control", placeholder:"Game Code", value:@code %>
+                </div>
+
+                <div class="form-group">
+                  <%= f.submit 'Submit', class:"btn btn-primary m-t-15 waves-effect" %>
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<% end %>
